<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reminderEditingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color">

                <TextView
                    android:id="@+id/editing_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/edit_remind"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/remind_name_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/remind_name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:paddingStart="3dp"
                    android:text="@string/remind_name"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/edit_name_remind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editing_text" />

                <EditText
                    android:id="@+id/edit_name_remind"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/please_enter_a_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="28"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/edit_remind_text_count"
                    app:layout_constraintEnd_toEndOf="@id/remind_name_text"
                    app:layout_constraintStart_toStartOf="@id/remind_name_text"
                    app:layout_constraintTop_toBottomOf="@id/edit_remind_text_count" />

                <TextView
                    android:id="@+id/edit_remind_text_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="end"
                    app:layout_constraintBottom_toTopOf="@id/set_timer_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_name_remind"
                    tools:text="0/28" />

                <TextView
                    android:id="@+id/set_timer_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_time"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/time_picker"
                    app:layout_constraintEnd_toEndOf="@id/remind_name_text"
                    app:layout_constraintStart_toStartOf="@id/remind_name_text"
                    app:layout_constraintTop_toBottomOf="@id/edit_remind_text_count" />

                <TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/time_picker_background"
                    android:theme="@style/AlertDialog.Theme"
                    android:timePickerMode="spinner"
                    app:layout_constraintBottom_toTopOf="@id/ringtone_text"
                    app:layout_constraintEnd_toEndOf="@id/remind_name_text"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/remind_name_text"
                    app:layout_constraintTop_toBottomOf="@id/set_timer_text" />

                <TextView
                    android:id="@+id/ringtone_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/ringtone"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/ringtone_list"
                    app:layout_constraintEnd_toEndOf="@id/remind_name_text"
                    app:layout_constraintStart_toStartOf="@id/remind_name_text"
                    app:layout_constraintTop_toBottomOf="@id/time_picker" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ringtone_list"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="160dp"
                    android:background="@drawable/button_background"
                    app:layout_constraintEnd_toEndOf="@id/remind_name_text"
                    app:layout_constraintStart_toStartOf="@id/remind_name_text"
                    app:layout_constraintTop_toBottomOf="@id/ringtone_text">

                    <ImageView
                        android:id="@+id/music_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/music_image"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/ringtone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ringtone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/ringtone_text"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@id/selected_ringtone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/music_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/selected_ringtone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="@string/ringtone_name"
                        android:textColor="@color/sky_blue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/ringtone"
                        app:layout_constraintTop_toBottomOf="@id/ringtone"
                        tools:text="@string/ringtone_name" />

                    <ImageView
                        android:id="@+id/ringtone_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:src="@drawable/reminder_arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/red"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
